feat(config): CAS-first dependency store; [application]/[native] jk.toml tables
- ~/.jk/cache is now the primary, permanent dependency store: every named
  repo materializes a hard-linked, human-readable copy under repos/<name>/
  (previously only the "local" repo did; others wrote straight to ~/.m2).
  Mirroring into ~/.m2 is opt-in via project.m2install (now defaults to
  false) and always a plain copy, never a hard link, since jk doesn't
  control writes to that directory.

- New top-level [application] ([main], [shadow-jar]) and extended [native]
  ([graal], [always]) tables replace [project].main/shadow/graal/native.
  Presence of the table is now the sole enable signal (isApplication(),
  nativeMode()) rather than a derived-or-overridden boolean. Hard cutover,
  no dual-path back-compat — this repo's own self-hosting jk.toml files are
  migrated along with the parser/model/renderers.

- jdk/graal specs now accept the lts/stable/latest/native keywords (fixes
  a pre-existing parser bug where these were rejected despite
  docs/jdk-resolution.md documenting them as supported); [native].graal
  defaults to "native" when the table is declared and the key is omitted.
  project.java now coerces a quoted string. The legacy `compact` layout
  alias is removed (inert, not an error).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>