@@ -10,7 +10,6 @@ import dev.jkbuild.util.Hashing;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.attribute.FileTime;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
@@ -58,37 +57,32 @@ class ClasspathResolverTest {
     }
 
     @Test
-    void falls_back_to_cas_when_m2_artifact_no_longer_matches_lock(@TempDir Path tempDir) throws Exception {
-        // Point the Maven local repo at a scratch dir (see M2Dirs) for the duration.
-        System.setProperty("jk.m2.local", tempDir.resolve("m2").toString());
-        try {
-            Cas cas = new Cas(tempDir.resolve("cache"));
-            byte[] jar = "genuine".getBytes(StandardCharsets.UTF_8);
-            String hex = Hashing.sha256Hex(jar);
-            String m2Path = "com/foo/a/1.0/a-1.0.jar";
-            Path m2Jar = tempDir.resolve("m2").resolve(m2Path);
-            Files.createDirectories(m2Jar.getParent());
-            Files.write(m2Jar, jar);
-            RepoArtifactStore.forRepoName(cas.root(), "central").recordIndex(m2Path, hex);
+    void falls_back_to_cas_when_repos_artifact_no_longer_matches_lock(@TempDir Path tempDir) throws Exception {
+        Cas cas = new Cas(tempDir.resolve("cache"));
+        byte[] jar = "genuine".getBytes(StandardCharsets.UTF_8);
+        String hex = Hashing.sha256Hex(jar);
+        String m2Path = "com/foo/a/1.0/a-1.0.jar";
+        Path casBlob = cas.put(jar);
+        RepoArtifactStore store = RepoArtifactStore.forRepoName(cas.root(), "central");
+        store.materialize(m2Path, casBlob, hex);
+        Path readablePath = store.locate(m2Path).orElseThrow();
 
-            Lockfile lock = new Lockfile(
-                    Lockfile.CURRENT_VERSION,
-                    "jk test",
-                    Lockfile.RESOLUTION_ALGORITHM,
-                    List.of(pkg("com.foo:a", "1.0", "sha256:" + hex)));
+        Lockfile lock = new Lockfile(
+                Lockfile.CURRENT_VERSION,
+                "jk test",
+                Lockfile.RESOLUTION_ALGORITHM,
+                List.of(pkg("com.foo:a", "1.0", "sha256:" + hex)));
 
-            // Intact mirror: the human-readable ~/.m2 path wins.
-            assertThat(new ClasspathResolver(cas).classpathFor(lock)).containsExactly(m2Jar);
+        // Intact store: the human-readable repos/<name>/... path wins.
+        assertThat(new ClasspathResolver(cas).classpathFor(lock)).containsExactly(readablePath);
 
-            // Poison the ~/.m2 copy out-of-band (newer mtime, different bytes). The
-            // resolver must not serve content the lockfile never pinned — it falls
-            // back to the CAS path, whose bytes are the hash it is named by.
-            Files.write(m2Jar, "poisoned".getBytes(StandardCharsets.UTF_8));
-            Files.setLastModifiedTime(m2Jar, FileTime.fromMillis(System.currentTimeMillis() + 5_000));
-            assertThat(new ClasspathResolver(cas).classpathFor(lock)).containsExactly(cas.pathFor(hex));
-        } finally {
-            System.clearProperty("jk.m2.local");
-        }
+        // Corrupt the index sidecar itself (repos/<name>/ is exclusively jk-owned, so this models
+        // local corruption/tampering rather than an external tool's rewrite). The resolver must
+        // not serve an artifact whose recorded hash no longer matches the lockfile pin — it falls
+        // back to the CAS path, whose bytes are the hash it is named by.
+        Path sidecar = store.root().resolve(m2Path + ".sha256");
+        Files.writeString(sidecar, "0000000000000000000000000000000000000000000000000000000000000000");
+        assertThat(new ClasspathResolver(cas).classpathFor(lock)).containsExactly(cas.pathFor(hex));
     }
 
     private static Lockfile.Artifact pkg(String module, String version, String checksum) {
